fixing some hovercard layout issues (bug 656374)

--- a/media/css/impala/hovercards.less
+++ b/media/css/impala/hovercards.less
@@ -24,6 +24,7 @@
             font-size: 13px;
             line-height: 16px;
             white-space: nowrap;
+            max-width: 200px;
         }
         .more {
             color: #666;
@@ -175,7 +176,6 @@
     }
     .item {
         margin: 5px 61px 5px 5px;
-        float: right;
         .more {
             padding: 0 12px 8px 14px;
         }
@@ -190,5 +190,8 @@
             left: auto;
             right: -57px;
         }
+    }
+    .addon:hover {
+        float: right;
     }
 }
